--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "nuxt start"
 	},
 	"dependencies": {
+		"@nuxtjs/axios": "^5.13.6",
 		"nuxt": "^2.15.6",
 		"tailwindcss": "^2.2.4",
 		"vuex": "^3.6.2"
