--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"@nuxtjs/axios": "^5.13.6",
+		"moment": "^2.29.1",
 		"nuxt": "^2.15.6",
 		"tailwindcss": "^2.2.4",
 		"vuex": "^3.6.2"
