--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite"
   },
   "dependencies": {
+    "moment": "^2.29.1",
     "vue": "^3.2.16",
     "vue-loading-overlay": "^4.0.4",
     "vue-router": "^4.0.0-0",
@@ -14,7 +15,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/cli-plugin-router": "~4.5.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.19",
